--- a/custom_components/mcintosh/manifest.json
+++ b/custom_components/mcintosh/manifest.json
@@ -6,6 +6,6 @@
     "documentation": "https://github.com/rsnodgrass/hass-mcintosh",
     "iot_class": "local_polling",
     "issue_tracker": "https://github.com/rsnodgrass/hass-mcintosh/issues",
-    "requirements": ["pyavcontrol>=0.1.2", "ratelimit"],
-    "version": "0.1.2"
+    "requirements": ["pyserial>=3.5", "pyserial-asyncio>=0.6"],
+    "version": "0.1.0"
 }
