Revert to McIntosh-only integration
- Removed all Lyngdorf code and references
- Restored McIntosh-only functionality in integration
- Reverted README to McIntosh-only documentation
- Updated manifest name to "McIntosh A/V Control"
- Restored simple volume handling (0-99 scale)
- Removed manufacturer detection logic
- Added pymcintosh library to repository

--- a/custom_components/mcintosh/manifest.json
+++ b/custom_components/mcintosh/manifest.json
@@ -1,6 +1,6 @@
 {
     "domain": "mcintosh",
-    "name": "McIntosh Audio",
+    "name": "McIntosh A/V Control",
     "codeowners": ["@rsnodgrass"],
     "config_flow": true,
     "documentation": "https://github.com/rsnodgrass/hass-mcintosh",
