Modernize to Home Assistant 2025.2+ standards
- Update manifest.json with homeassistant: "2025.2.0", integration_type: "device", iot_class: "local_polling"
- Add DataUpdateCoordinator pattern for centralized data management
- Modernize config_flow.py with SelectSelector, TextSelector, and options flow
- Add diagnostics.py for troubleshooting support
- Update strings.json and translations/en.json with UX-focused labels and descriptions
- Update Python code with modern type hints (| unions, lowercase dict/list)
- Add comprehensive test suite with pytest fixtures
- Fix all ruff lint errors
- Bump version to 0.3.0 and require Python 3.13+

--- a/custom_components/mcintosh/manifest.json
+++ b/custom_components/mcintosh/manifest.json
@@ -4,8 +4,10 @@
     "codeowners": ["@rsnodgrass"],
     "config_flow": true,
     "documentation": "https://github.com/homeassistant-community/hass-mcintosh",
+    "homeassistant": "2025.2.0",
+    "integration_type": "device",
     "iot_class": "local_polling",
     "issue_tracker": "https://github.com/homeassistant-community/hass-mcintosh/issues",
     "requirements": ["pyserial>=3.5", "pyserial-asyncio>=0.6"],
-    "version": "0.2.0"
+    "version": "0.3.0"
 }
