--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,17 @@
 [project]
 name = "hass-mcintosh"
+version = "0.1.0"
 requires-python = ">=3.13"
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0",
+    "pytest-asyncio>=1.0",
+]
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+testpaths = ["tests"]
 
 [tool.ruff]
 line-length = 100
